--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -25,6 +25,7 @@
             type="button"
             color="white"
             outline="true"
+            [routerLink]="['/rekrutacja']"
             mdbWavesEffect>
             <i class="fa fa-briefcase" aria-hidden="true"></i> Rekrutacja
           </button>
@@ -265,10 +266,6 @@
             </li>
           </ul>
 
-          <!--<blockquote class="blockquote">-->
-          <!--<p class="mb-0">"Teorię przekładamy na praktyczne przykłady łatwe do zrozumienia i gotowe do wdrożenia"</p>-->
-          <!--</blockquote>-->
-
         </div>
       </div>
     </div>
@@ -288,11 +285,6 @@
               <strong>Poznaj języki i technologie w ramach przedmiotów</strong>
             </h2>
 
-            <!--Section description-->
-            <!--<p class="text pb-5 text-center">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat-->
-            <!--cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
-
-            <!--Grid row-->
             <div class="row text-center">
 
               <!--Grid column-->
