--- a/src/app/sites/about/about.component.html
+++ b/src/app/sites/about/about.component.html
@@ -21,6 +21,8 @@
 
       <div class="img-section img-section-left">
 
+        
+
         <div class="row">
           <div class="col-5 animated fadeInLeft" data-wow-delay="0s">
             <!-- animated -->
@@ -56,25 +58,21 @@
 
         <div class="row">
 
-          <div class="col-7 wow fadeIn" data-wow-delay="0.3s">
+          <div class="col-7 animated fadeIn" data-wow-delay="0s">
             <div class="section-text">
 
               <h2 class="h-article">Cel kształcenia</h2>
 
               <p>Głównym celem kształcenia jest poznanie aktualnej wiedzy teoretycznej oraz zdobycie przez słuchaczy
                 umiejętności praktycznych z zakresu technologii funkcjonujących na bazie Internetu, w szczególności:
-                podstaw
-                obiektowych języków programowania, technik publikowania w sieci Web oraz metod projektowania,
-                programowania i
-                wdrażania systemów baz danych z dostępem przez Internet, programowania urządzeń mobilnych. Przyjęcie
-                takiego
-                profilu studiów uzasadnione jest zapotrzebowaniem rynku pracy na pracowników, którzy skutecznie
-                potrafią
-                wdrażać technologie Internetowe, szczególnie te, które są związane z gwałownym rozwojem rynku urządzeń
+                podstaw obiektowych języków programowania, technik publikowania w sieci Web oraz metod projektowania,
+                programowania i wdrażania systemów baz danych z dostępem przez Internet, programowania urządzeń mobilnych. Przyjęcie
+                takiego profilu studiów uzasadnione jest zapotrzebowaniem rynku pracy na pracowników, którzy skutecznie
+                potrafią wdrażać technologie Internetowe, szczególnie te, które są związane z gwałownym rozwojem rynku urządzeń
                 mobilnych.</p>
             </div>
           </div>
-          <div class="col-5 wow fadeInRight" data-wow-delay="0.3s">
+          <div class="col-5 animated fadeInRight" data-wow-delay="0.3s">
             <div class="section-picture img-a-2"></div>
           </div>
         </div>
@@ -92,7 +90,7 @@
 
               <h2 class="h-article">Nabywana wiedza</h2>
 
-              <p>W trakcie studiów podyplomowych "Technologie internetowe" studenci poznają:</p>
+              <p>W trakcie studiów podyplomowych <b>Technologie Internetowe</b> studenci poznają:</p>
 
               <ul>
                 <li>Programowanie obiektowe w językach C++ (zasady programowania obiektowego, pisanie aplikacji) oraz
@@ -149,7 +147,7 @@
 
               <h2 class="h-article">Oferta dodatkowa</h2>
 
-              <p>W ramach prowadzonych studiów podyplomowych "Technologie internetowe" istnieje możliwość przygotowania
+              <p>W ramach prowadzonych studiów podyplomowych <b>Technologie Internetowe</b> istnieje możliwość przygotowania
                 studentów do dodatkowych egzaminów certyfikujących firm Oracle i Microsoft. Zdanie wybranego
                 dodatkowego
                 egzaminu uprawnia do otrzymania odpowiedniego certyfikatu, honorowanego na całym świecie. Studenci
