--- a/src/app/sites/panel/accounts/accounts.component.html
+++ b/src/app/sites/panel/accounts/accounts.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light scrolling-navbar" id="toolbar">
+<nav class="navbar navbar-expand-lg navbar-light scrolling-navbar navbar-dark blue-gradient" id="toolbar">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
