--- a/src/app/sites/panel/files/file-explorer/file-explorer.component.scss
+++ b/src/app/sites/panel/files/file-explorer/file-explorer.component.scss
@@ -12,8 +12,7 @@
 .text-red {
   color: #CC0000 !important;
 }
-#toolbar {
-  //background: rgba(0,0,0,0.1);
+.blue-gradient {
   color: white;
 }
 .container-files {
